2016-09-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Relax strict ISO-C conformity to facilitate C99 support.

	* include/stdlib.h (_atoi64, _exit) [__STRICT_ANSI__]: Convention
	dictates that the Microsoft specific functions should not be declared;
	however, C99 provides equivalents in atoll() and _Exit(), for which we
	gratuituously use them to provide inline implementations; thus...
	[_ISOC99_SOURCE && !__NO_INLINE__]: ...declare them anyway.

2016-09-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Suppress expected header warnings when running testsuite.

	* include/dir.h include/dos.h [__IN_MINGWRT_TESTSUITE__]: New feature
	test; do not emit warning messages, which declare this pair of headers
	to be obsolete.  These warnings are expected, but their format may not
	be deterministically predictable; there is no reason to fail any test
	on account of any such expected warning message.

2016-09-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Create a preliminary autotest framework.

	* configure.ac (AC_TESTDIR): Initialize tests subdirectory.
	(AC_PROG_CXX): Identify C++ compiler; the testsuite will use it.
	(AC_CHECK_PROG): Check availability of autom4te; specify fallback.
	(AC_CONFIG_FILES): Add instantiation requests for tests/atlocal,
	tests/Makefile, and tests/testsuite.at.tmp

	* tests/testsuite.at.in tests/atlocal.in tests/headers.at
	* tests/Makefile.in: New files; implement them.

	* Makefile.in (check, check-recursive, tests): Implement new goals.
	(mingwrt-srcdist-files): Subdivide package files complement into...
	(mingwrt-srcdist-package-files): ...this original collection, and...
	(mingwrt-srcdist-testsuite-files): ...this additional set.

	* test_headers.c: Superseded by autotest; delete it.

2016-08-25  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add pthreads-win32 courtesy support hooks.

	* include/errno.h: Assert copyright; tidy layout.